<resources>
    <string name="blockmynumber">Block my number:</string>
    <string name="enteryourpin">Enter your PIN</string>
    <string name="legal">Legal</string>
    <string name="app_name">YourPractice</string>
    <string name="title_activity_main">YourPractice</string>
    <string name="update">Refresh</string>
    <string name="Patient_mode">Patient/Guardian</string>
    <string name="Provider_mode">Provider/Staff</string>
    <string name="title_activity_about">About</string>
    <string name="about_developers">This application was developed by RemedyConnect. From designing custom websites and mobile apps to providing state-of-the-art digital answering services, RemedyConnect provides a 24/7 presence and voice for private practices, allowing providers to give their patients more convenience and better self-directed care.\n\n</string>
    <string name="about_libs">This application uses the <a href="http://jsoup.org">jsoup</a> open source software library under the MIT license.\n\nCopyright © 2009 &#8211; 2013 Jonathan Hedley (jonathan@hedley.net)\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n\n<b>Zip4j License</b>\n\nCopyright 2013 Srikanth Reddy Lingala\n\nLicensed under the Apache License, Version 2.0 (the "License");\nYou may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n\n\n<b>ActionBarSherlock license</b>\n\nCopyright 2012 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the "License"); You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\nThis application uses the <b>android-viewbadger</b> Library under the Apache License.\n\nCopyright (c) 2011 readyState Software Ltd.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\nThis application uses the <b>jackson-annotations</b> and the jackson-databind Libraries under the Apache License.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\nThis application uses the <b>robospice</b> Library under the Apache License\n\nCopyright (C) 2012 OCTO Technology (http://www.octo.com)\n\n Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\nThis application uses the <b>Passcodelock-Android Library</b> under the MIT License Copyright (c) 2013 Automattic Inc.\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n\n</string>
    <string name="welcome">Welcome!</string>
    <string name="title_activity_page_my_doctor">Page My Doctor</string>
    <string name="page_my_doctor_intro">We use a third-party service, Page My Doctor, so you can page the on-call provider with an urgent question after hours. First time users will register first. It’s simple! Please be brief and specific. Pagers and cell phones won’t take long messages easily.</string>
    <string name="page_my_doctor_open">Open Page My Doctor</string>
    <string name="logo_description">Logo</string>
    <string name="title_select_practice">Select your practice</string>
    <string name="title_select_practice_mode">Select your application mode</string>
    <string name="button_provide_staff_text">PROVIDER / STAFF</string>
    <string name="button_patient_gardian_text">PATIENT / GUARDIAN</string>
    <string name="practice_select_practice_mode_text">I am a ...</string>
    <string name="practice_return_toSearch">Return To Search</string>
    <string name="practice_search_description">Welcome! Your are about to download information that your primary care provider has approved. Please ensure that you have a working Internet connection before starting the search. \nThis information is only intended for registered patients of this organization. Please choose the practice where you, or your family member, is a registered patient.\nTo select your practice, type and search. If you would like to search for the nearest practice, start a location-based search below.</string>
    <string name="practiceSearchEditHint">Enter Your Practice\'s Name</string>
    <string name="practiceSearchStartByNameText">Search by name</string>
    <string name="practiceSearchStartByLocationText">Search by location</string>
    <string name="about">About</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="searching_locations">Searching practice location information, please wait&#8230;</string>
    <string name="downloading">Downloading practice information, please wait&#8230;</string>
    <string name="download_failed">Failed to download data. Please ensure that your Internet connection is working and try again.</string>
    <string name="downloadssl_failed">Failed to download data due to not being able to establish a secure connection. Please contact your system administrator.</string>
    <string name="extracting_design">Extracting design, please wait&#8230;</string>
    <string name="parsing_for_more">Discovering additional content, please wait&#8230;</string>
    <string name="starting_additional_download">Found new content, please wait&#8230;</string>
    <string name="menu_background">Menu background</string>
    <string name="logo">Logo</string>
    <string name="splashscreen">Splashscreen</string>
    <string name="couldnt_find_practice_near_location">We couldn\'t find a practice near to your location, please start
        a search by practice name.
    </string>
    <string name="choose_your_practice">Choose Your Practice</string>
    <string name="welcome_medsecure">This is the testing interface for in-app notifications. Please choose from the following options:</string>
    <string name="test_inapp_notifications_message">The in-app notifications on your device are up and running.</string>
    <string name="test_inapp_notifications_subject">Welcome to MedSecure!</string>
    <string name="yourUsername">Your username</string>
    <string name="yourPassword">Your password</string>
    <string name="Login">Login</string>
    <string name="deleteMessage">Delete message</string>
    <string name="deleteThread">Delete thread</string>
    <string name="replyMessage">Reply</string>
    <string name="myAccount">My Account</string>
    <string name="logout">Logout</string>
    <string name="testNotifications">Test notifications</string>
    <string name="sendMessage">Send message</string>
    <string name="inbox">Inbox</string>
    <string name="sentItems">Sent items</string>
    <string name="subject">Subject</string>
    <string name="yourMessage">Your message</string>
    <string name="sendYourMessage">Send message</string>
    <string name="loginTextContent">Please enter your RemedyOnCall Admin Username and Password below.</string>
    <string name="createpin">CREATE YOUR PIN</string>
    <string name="pinlineone">This is your first time accessing RemedyConnect\'s mobile app.</string>
    <string name="pinlinetwo">In order to maintain the confidentiality of your patients, you are required to setup a 4 digit PIN.</string>
    <string name="selectRecipientPrompt">Please select a recipient</string>
    <string name="passcodeSettings">Passcode settings</string>
    <string name="MyMessages">My Messages</string>
    <string name="Admin">Admin</string>
    <string name="sender">Sender</string>
    <string name="what_happens">What happens </string>
    <string name="read_four_mins_ago">Read 4 mins ago</string>
    <string name="read_icon">Read icon</string>
    <string name="select_recipients">Select recipients</string>
    <string name="sendGroupMessage">Send a group message</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ullamcorper aliquam arcu eu convallis. In hac habitasse platea dictumst. In tincidunt orci et enim rutrum, at fringilla orci laoreet. Donec convallis lacinia tempus. Nullam a tristique purus, et pretium lectus. Maecenas et dui augue. Nullam porttitor sem ac odio pellentesque tincidunt. In volutpat, ante iaculis tincidunt consequat, elit nunc laoreet mi, id interdum mauris sem a velit.</string>
</resources>