<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTextContent"
        android:id="@+id/loginTextView"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:hint="@string/yourUsername"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/yourPassword"/>

    <Button
        style="@style/MyAccountButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/buttonLogin"
        />
</LinearLayout>
