<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recipientSpinner"
        android:spinnerMode="dropdown"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:minHeight="48sp"
        android:prompt="@string/selectRecipientPrompt"/>

    <Button
        style="@style/MainMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_recipients"
        android:id="@+id/selectGroupRecipientsButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_below="@id/recipientSpinner"
        android:visibility="gone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subjectEditText"
        android:hint="@string/subject"
        android:layout_below="@id/selectGroupRecipientsButton"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/messageEditText"
        android:hint="@string/yourMessage"
        android:scrollbars="vertical"
        android:layout_below="@id/subjectEditText"
        android:layout_above="@id/sendMessageButton"
        android:singleLine="false"
        android:gravity="top" />

    <Button
        style="@style/MainMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendYourMessage"
        android:id="@+id/sendMessageButton"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
