<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainMenuLayout"
    android:columnCount="4"
    android:layout_gravity="right">

    <ImageView
        android:id="@+id/mainMenuBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/background_texture"
        android:scaleType="centerCrop"
        android:contentDescription="@string/menu_background"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:padding="5dp"
        android:scaleType="fitCenter"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/midButtonRow"
        android:layout_marginBottom="70dp"
        android:orientation="vertical">

        <Button
            style="@style/MainMenuButton"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:id="@+id/provider_mode_button"
            android:layout_margin="10dp"
            android:text="@string/button_provide_staff_text"
            android:textColor="#ffffffff"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/MainMenuButton"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:id="@+id/patient_mode_button"
            android:layout_margin="10dp"
            android:textColor="#ffffffff"
            android:text="@string/button_patient_gardian_text"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/practice_select_practice_mode_text"
        android:id="@+id/ModetextView"
        android:gravity="center"
        android:textColor="#ffffffff"
        android:layout_above="@+id/midButtonRow"
        android:textSize="32dp"
        android:textStyle="bold"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/practice_return_toSearch"
        android:id="@+id/return_to_Search"
        android:gravity="center"

        android:textColor="#ffffffff"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_alignBottom="@+id/mainMenuBackground"
        android:clickable="true" />
</RelativeLayout>