<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mainMenuLayout"
                android:columnCount="4"
                android:layout_gravity="right">

    <ImageView
        android:id="@+id/mainMenuBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:src="@drawable/background_texture"
        android:scaleType="centerCrop"
        android:contentDescription="@string/menu_background"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:padding="5dp"
        android:scaleType="fitCenter"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/midButtonRow"

        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp">

        <Button
            style="@style/MainMenuButton"
            android:layout_width="275dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:id="@+id/menuButton3"
            android:layout_margin="10dp"
            android:text="@string/MyMessages"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/MainMenuButton"
            android:layout_width="275dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:id="@+id/menuButton4"
            android:layout_margin="10dp"
            android:text="@string/Admin"
            android:layout_gravity="center_horizontal|top" />

    </LinearLayout>





</RelativeLayout>