<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/greetingsHeader"
        android:padding="5dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_medsecure"
        android:id="@+id/greetingsText"
        android:padding="5dp"
        android:layout_below="@+id/greetingsHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/MyAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testNotifications"
        android:id="@+id/btnSendTestNotification"
        android:drawableLeft="@drawable/lightbulb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="8sp"
        android:layout_below="@+id/passcodeSettingsButton" />

    <Button
        style="@style/MyAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/pencilplus"
        android:text="@string/sendMessage"
        android:id="@+id/sendMessageButton"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="8sp"
        android:layout_below="@+id/greetingsText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/MyAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/pencilplus"
        android:text="@string/sendGroupMessage"
        android:id="@+id/sendGroupMessageButton"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="8sp"
        android:layout_below="@+id/sendMessageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/MyAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Messages"
        android:id="@+id/messageThreadsButton"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="8sp"
        android:layout_below="@+id/sendGroupMessageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/MyAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passcodeSettings"
        android:drawableLeft="@drawable/gear"
        android:id="@+id/passcodeSettingsButton"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="8sp"
        android:layout_below="@+id/myAccountControlButtons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/myAccountControlButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="8sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/messageThreadsButton"
        android:weightSum="1">

        <Button
            style="@style/MyAccountButton"
            android:layout_width="match_parent"
            android:text="@string/inbox"
            android:drawableLeft="@drawable/boxdownload"
            android:id="@+id/btnInbox"
            android:layout_marginRight="4sp"
            android:layout_weight="0.50"
            android:layout_height="wrap_content" />

        <Button
            style="@style/MyAccountButton"
            android:layout_width="match_parent"
            android:text="@string/sentItems"
            android:drawableLeft="@drawable/boxupload"
            android:id="@+id/btnSent"
            android:layout_marginLeft="4sp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
